# pdf-cleaner

./: .gitignore  Cargo.toml  README.md  main.d.ts  main.js  package.json
.github/workflows/: rust.yml
scripts/: build.sh
src/: clean_pdf.rs  filter_operations.rs  lib.rs  remove_text.rs  text.rs
tests/: leave_only_text_idempotent.rs  leave_only_text_test.rs  remove_text_test.rs
